src/objects/APTS_Index_Contract__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Additional_Conditions__c</fullName>
        <label>Additional Conditions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_AgreementExtId__c</fullName>
        <label>Agreement External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Agreement_Language__c</fullName>
        <formula>TEXT(APTS_Contract__r.APTS_Language__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Communication_Deadline_Translated__c</fullName>
        <label>Communication Deadline Translated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Communication_Deadline__c</fullName>
        <label>Communication Deadline</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>1 Month</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2 Months</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3 Months</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>4 Months</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>5 Months</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>6 Months</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Communication_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Communication Needed(Yes/No)?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Index Contracts</relationshipLabel>
        <relationshipName>Index_Contracts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>APTS_ConversionId__c</fullName>
        <label>Conversion Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Customer_Approval_Required_Trans__c</fullName>
        <label>Customer Approval Required Trans</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Customer_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Approval Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Execution_Date__c</fullName>
        <description>This is relevent only for non-standard indexation.</description>
        <inlineHelpText>This is relevent only for non-standard indexation.</inlineHelpText>
        <label>Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Frequency_Translated__c</fullName>
        <label>Frequency Translated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>Half-Yearly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Index_Category_Translated__c</fullName>
        <label>Index Category Translated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Index_Type__c</fullName>
        <description>Type of Indexation</description>
        <inlineHelpText>Type of Indexation</inlineHelpText>
        <label>Index Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Indexation</fullName>
                    <default>true</default>
                    <label>Standard Indexation</label>
                </value>
                <value>
                    <fullName>Non-Standard Indexation</fullName>
                </value>
                <value>
                    <fullName>No Indexation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Indexation_Category__c</fullName>
        <description>Defines Indexation Category</description>
        <inlineHelpText>Defines Indexation Category</inlineHelpText>
        <label>Indexation Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Products (Ingredients and &amp;More)</fullName>
                </value>
                <value>
                    <fullName>Technical Services</fullName>
                </value>
                <value>
                    <fullName>Consumption Pricing</fullName>
                </value>
                <value>
                    <fullName>Machine Care Service</fullName>
                    <isActive>false</isActive>
                    <label>Machine Care Service</label>
                </value>
                <value>
                    <fullName>Maintenance Services</fullName>
                    <isActive>false</isActive>
                    <label>Maintenance Services</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Indexation_Number__c</fullName>
        <label>Indexation Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Maximum_Bandwidth__c</fullName>
        <label>Maximum Bandwidth</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_MigrationDate__c</fullName>
        <label>Migration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_SourceSystem__c</fullName>
        <label>Source System</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Index Contract</label>
    <nameField>
        <displayFormat>IC-{00000000}</displayFormat>
        <label>Index Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Index Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Value_change_Check</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ISPICKVAL(APTS_Index_Type__c, &apos;Non-Standard Indexation&apos;),
      NOT(
         OR(
         ISCHANGED(APTS_Additional_Conditions__c),
         ISCHANGED(APTS_Communication_Deadline__c),
         ISCHANGED(APTS_Communication_Needed__c),
         ISCHANGED(APTS_Customer_Approval_Required__c),
         ISCHANGED(APTS_Frequency__c),
         ISCHANGED(APTS_Indexation_Category__c),
         ISCHANGED(APTS_Indexation_Number__c),
         ISCHANGED(APTS_Maximum_Bandwidth__c),
         ISCHANGED(APTS_Start_Date__c)
        )
      )
)</errorConditionFormula>
        <errorMessage>You have defined an indexation without changing any Indexation specific values. Please change back to “Standard Indexation” or change any Indexation specific values.</errorMessage>
    </validationRules>
</CustomObject>